// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STEM tool render goldens (default state) > renders + pins a digest for accessLens 1`] = `
{
  "buttons": 8,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "caaf192ade0f0aad",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquacultureLab 1`] = `
{
  "buttons": 182,
  "inputs": 2,
  "lengthBucket": 578,
  "sha": "eb21f607bef2c516",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquarium 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 164,
  "sha": "d73f879efb8b7229",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 19,
  "inputs": 4,
  "lengthBucket": 57,
  "sha": "0d3904e5f4505c33",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for cellularLab 1`] = `
{
  "buttons": 52,
  "inputs": 3,
  "lengthBucket": 131,
  "sha": "6019ff100dd5881a",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for climateExplorer 1`] = `
{
  "buttons": 40,
  "inputs": 0,
  "lengthBucket": 171,
  "sha": "bccd1ceaad8280c8",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for ecosystem 1`] = `
{
  "buttons": 47,
  "inputs": 11,
  "lengthBucket": 222,
  "sha": "adf1757cb9a5cc17",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 191,
  "sha": "659e1eae83cf1840",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geologyExplorer 1`] = `
{
  "buttons": 51,
  "inputs": 2,
  "lengthBucket": 192,
  "sha": "6a0d87f3cd170cc5",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geometryWorld 1`] = `
{
  "buttons": 0,
  "inputs": 0,
  "lengthBucket": 3,
  "sha": "b8a99a790463ce28",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for musicSynth 1`] = `
{
  "buttons": 121,
  "inputs": 15,
  "lengthBucket": 266,
  "sha": "5d05f31db9443262",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for opticsLab 1`] = `
{
  "buttons": 35,
  "inputs": 0,
  "lengthBucket": 113,
  "sha": "86dc5aab1eb25ee0",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for spaceColony 1`] = `
{
  "buttons": 16,
  "inputs": 7,
  "lengthBucket": 102,
  "sha": "b1517bc7ff714d9a",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "a7718d5d6633b37f",
  "svgs": 1,
}
`;
